[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game/Common/Utils/UI/common_button.gd" type="Script" id=1]
[ext_resource path="res://Game/Common/Themes/Menus/MainMenu/main_menu.tres" type="Theme" id=2]
[ext_resource path="res://Game/Common/Menus/MainMenu/main_menu_ui.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.94902, 0.329412, 0.176471, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing_size = 0.75

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.337255, 0.172549, 0.172549, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing_size = 0.75

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.337255, 0.172549, 0.172549, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing_size = 0.75

[node name="MainMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 366.0
margin_top = 111.0
margin_right = 657.0
margin_bottom = 489.0
rect_min_size = Vector2( 250, 0 )

[node name="PlayButton" type="Button" parent="Buttons"]
margin_right = 291.0
margin_bottom = 57.0
text = "MENU_PLAY"
script = ExtResource( 1 )

[node name="LevelSelectButton" type="Button" parent="Buttons"]
margin_top = 107.0
margin_right = 291.0
margin_bottom = 164.0
text = "MENU_LEVEL_SELECTION"
script = ExtResource( 1 )

[node name="OptionsButton" type="Button" parent="Buttons"]
margin_top = 214.0
margin_right = 291.0
margin_bottom = 271.0
text = "MENU_SETTINGS"
script = ExtResource( 1 )

[node name="QuitButton" type="Button" parent="Buttons"]
margin_top = 321.0
margin_right = 291.0
margin_bottom = 378.0
custom_colors/font_color_focus = Color( 0.337255, 0.172549, 0.172549, 1 )
custom_colors/font_color_hover = Color( 0.94902, 0.329412, 0.176471, 1 )
custom_colors/font_color_pressed = Color( 0.337255, 0.172549, 0.172549, 1 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
text = "MENU_QUIT"
script = ExtResource( 1 )
